tests/fixtures/invalid/len_2_args.py
# len() takes at most 1 argument, got 2
x = len(1, 1)
